using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Nightingale
{
    public class Nightingale
    {
        public void Sweep()
        {
            Console.WriteLine("掃地");
        }

        public void Wash()
        {
            Console.WriteLine("洗衣");
        }

        public void BuyRice()
        {
            Console.WriteLine("買米");
        }
        public void MonitorNurse()
        {
            Console.WriteLine("監督護士");
        }
        public void EnsureThePurityOfMedicine()
        {
            Console.WriteLine("確保藥物的純淨");
        }

        public void OperateHospitalEquipment()
        {
            Console.WriteLine("操作醫院設備");
        }
    }
}
